[package]
name = "backtracer"
version = "0.0.2"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>",
           "Alex Crichton <alex@alexcrichton.com>",
           "The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/gz/backtracer"
homepage = "https://github.com/gz/backtracer"
documentation = "https://docs.rs/backtracer"

description = """
A library to acquire a stack trace (backtrace) at runtime in a no-std Rust program.
"""

[dependencies]
cfg-if = "0.1"
x86 = "0.32.0"
log = "0.4"

[dependencies.addr2line]
version = "0.14.1"
default-features = false
features = ["rustc-demangle"]

[dependencies.gimli]
version = "0.23.0"
default-features = false
features = ["read", "fallible-iterator", "endian-reader"]
